test(code): 适配VFS迁移后的单元测试
- 测试文件添加CoreInitialization生命周期
- 修复VFS路径格式（file:而非file:/）
- 重写TestIncrementalDetector使用IResource API
- 删除TestPathFingerprintStore（对应类已删除）
- TestCodeIndexService改用VFS路径
- 更新开发日志